--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "league/oauth2-server": "@stable",
         "yiisoft/yii2": "@stable",
-        "rowasc/yii2loggingutils":"dev-master"
+        "rowasc/yii2loggingutils":"*"
     },
     "require-dev": {
         "codeception/codeception": "^2.1",
